lotsa mods, ng upd

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,15 +1,17 @@
-<nav class="lg-header">
-
+<nav class="lg-header storycat_hdr">
     <div class="container">
         <h1 class="py-5">
+
+            <span aria-hidden="true" class="fas fa-cat"></span>
+            STORYCAT
+            <span aria-hidden="true" class="fas fa-cat fa-flip-horizontal"></span>
+
             
-            <i class="fas fa-cat"></i>
-            
-            STORYCAT</h1>
+        </h1>
+
     </div>
 
     <div class="">
         <app-nav-bar></app-nav-bar>
     </div>
-
 </nav>
