--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,26 +3,25 @@
     <div class="row justify-content-around sandbox-tiles">
 
         <div class="col-sm-12 shadow">
-            <h3> Jan 2021</h3> 
+            <h3> June 2021</h3> 
                 <h4><a routerLink="/storycat"> Story Catalog under construction</a></h4>
         </div>
 
         <div class="col-sm-12 col-md-6 shadow">
 
             <h4>Bootstrap 5</h4>
-            <p>Far more Flexbox than v4, so if you know your stuff, you'll have fun doing the necessary refactoring. Starting to notice a few minor issues.</p>
+            <p>Far more Flexbox than 4.</p>
 
         </div>
 
         <div class="col-sm-12 col-md-5 shadow">
 
-            <h4>Angular 11</h4> Finding it good. The upgrade path from 8 to 9 to 10 was a touch tricky, 10 to 11 a lot
-            smoother.
+            <h4>Angular 12</h4> 
 
         </div>
 
         <div class="col-sm-12 col-md-6 shadow">
-            FA 5 free icons, <i class="fas fa-anchor"></i> may well get Pro.
+            FA 5 free icons <i class="fas fa-anchor"></i>
         </div>
 
 
